--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 
         function trocarFrase(){
             var fraseAtual=document.getElementById("frase");
-            fraseAtual.innerHTML= "Funcionou, a frase mudou!";
+            fraseAtual.innerHTML= "Qualquer frase!";
             fraseAtual.style.color= "purple";
             fraseAtual.style.fontSize= "25px";
             fraseAtual.style.backgroundColor= "lightblue";
             document.body.style.backgroundColor= "lightgreen";
+            fraseAtual.innerHTML= "<img src=\'img/rapunzel.jpg\' />"
         }
     </script>
 </head>
