--- a/index.html
+++ b/index.html
@@ -6,17 +6,8 @@
     <title>Javascript</title>
     <script>
         alert("ola  galerinha")
-
-        function trocarFrase(){
-            var fraseAtual=document.getElementById("frase");
-            fraseAtual.innerHTML= "Qualquer frase!";
-            fraseAtual.style.color= "purple";
-            fraseAtual.style.fontSize= "25px";
-            fraseAtual.style.backgroundColor= "lightblue";
-            document.body.style.backgroundColor= "lightgreen";
-            fraseAtual.innerHTML= "<img src=\'img/rapunzel.jpg\' />"
-        }
     </script>
+    <script src="js/myscript.js"></script>
 </head>
 <body>
     <h1 id="frase" ondblclick="trocarFrase()">Olá Mundo!</h1>
