--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
         alert("ola  galerinha")
     </script>
     <script src="js/myscript.js"></script>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1 id="frase" ondblclick="trocarFrase()">Olá Mundo!</h1>
+    <h1 id="frase" ondblclick="trocarFrase()" class="h1_1">Olá Mundo!</h1>
 </body>
 </html>
