--- a/index.html
+++ b/index.html
@@ -6,11 +6,23 @@
     <title>Javascript</title>
     <script>
         alert("ola  galerinha")
+
+        function trocarTexto() {
+            var elemento = document.getElementById("frase")
+            var elementoNovo = document.getElementById("novaFrase").value
+            elemento.innerHTML = elementoNovo
+    }
     </script>
-    <script src="js/myscript.js"></script>
+    <script src="js/myscript.js" type="text/javascript"></script>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1 id="frase" ondblclick="trocarFrase()" class="h1_1">Olá Mundo!</h1>
+    <h1 id="frase" ondblclick="trocarFrase()" onmouseover="trocarClasse()" class="h1_1">Olá Mundo!</h1>
+    <input id="novaFrase" type="text"> <br>
+    <input id="botao" type="button"
+        value="trocar Frase"
+        onclick="trocarTexto();"> <br>
+
+    <a href="calculadora.html">Calculadora</a>    
 </body>
 </html>
