--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         value="trocar Frase"
         onclick="trocarTexto();"> <br>
 
-    <a href="calculadora.html">Calculadora</a>    
+    <a href="calculadora.html">Calculadora</a>   
+    <br>
+    <button><a href="validar.html">Validação</a></button>
 </body>
 </html>
