--- a/index.html
+++ b/index.html
@@ -26,5 +26,6 @@
     <a href="calculadora.html">Calculadora</a>   
     <br>
     <button><a href="validar.html">Validação</a></button>
+    <button><a href="formulario.html">Formulário</a></button> <br>
 </body>
 </html>
