--- a/validar.html
+++ b/validar.html
@@ -4,73 +4,81 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Validação</title>
-    <script>
 
-        function trabalhandoNome(){
-        var nome = prompt ("Diga um nome","Sophia")
-        var sobrenome = prompt ("Diga um sobrenome","Duquesne")
-        var nomeCompleto = nome + " " + sobrenome
-        var tamanhoDoNome = nomeCompleto.length
-        alert("[" + nomeCompleto + "]" + "\n" + "com tamanho = " + tamanhoDoNome)
+        <script src="js/myscript.js" type="text/javascript"></script>
+        <script>
+            function trabalhandoNomes() {
+                var nome = prompt("Diga um nome", "Sophia")
+                var sobreNome = prompt("Diga um sobrenome", "Duquesne")
+                var nomeCompleto = nome + " " + sobreNome
+                var tamanhoDoNome = nomeCompleto.length
+                var txt = nomeCompleto + " \n tem tamanho de " + tamanhoDoNome
+                var resposta = confirm(nomeCompleto + " está certo?")
 
-        var retorno = confirm("Seu nome é:" + nomeCompleto + "?")
-        if(retorno){
-            console.log("Ok!")
-            document.write("Confirmado o nome!")
-        }else{
-            console.log("Algo deu errado!")
-            document.write("Errou o nome!")
-        }
-    }
-    //trabalhandoNome ()
+                if (resposta == true) {
+                    imprimir(txt)
+                } else {
+                    imprimir("Deu ruim")
+                }
+            }
 
-    function trabalhandoNúmeros() {
-        var num1 = prompt ("Diga um número")
-        var num2 = prompt ("Diga outro número")
-        var total = parseFloat (num1) + parseFloat (num2)  //float: com ponto flutuante Int: inteiros
-        alert("total =" + total)
-    }
-    //trabalhandoNúmeros()
+            function imprimir(texto) {
+                console.log(texto)
+                alert(texto)
+                document.writeln(texto)
+            }
 
-    function validar(){
-        var email = gebi("idEmail").value;
-        var senha = gebi("idSenha").value;
+            function trabalhandoNúmeros() {
+                var n1 = prompt("Diga um número")
+                var n2 = 5
+                var total = parseInt(n1) + n2
+                imprimir(total)
+            }
 
-        if(email.length < 5){
-            alert("email está errado!")
-            return 
-        }
+            function maiuscula(){
+                var email = gebi("idEmail").value
+                var emailMaiusculas = email.toUpperCase()
+                gebi("idEmail").value = emailMaiusculas
+            }
 
-        if (senha.length< 3){
-            alert ("senha deve conter mais que três caracteres!")
-            return 
-        }
+            function validar(){
+                var email = gebi("idEmail").value
+                var senha = gebi("idSenha").value
+                var idade = gebi("idIdade").value
 
-        gebi ("meuForm").submit()
-        alert ("Sucesso!")
-    }
+                if (email.length < 5) {
+                    alert("email está errado!")
+                    return
+                }
 
-    function maiuscula(){
-        var email = gebi("idEmail").value;
-        var emailEmMaiusculas = email.toUpperCase ();
-        console.log (emailEmMaiusculas)
-        gebi ("idEmail").value = email.toUpperCase();
-    }
+                if (senha.length < 3) {
+                    alert("senha deve ser maior que 3!")
+                    return
+                }
 
-    </script>
-    <script type="text/javascript" src="js/myscript.js"></script>
-</head>
-<body>
-    <center>
-        <h1>Validar</h1>
-        <form id="meuForm" action="http://jkorpela.fi/cgi-bin/echo.cgi">
-            <fieldset align="center" style="width: 270px;">
-                <legend>Login:</legend>
-                Email: <input type="text" id="idEmail" required onblur="maiuscula()" name="email"><br>
-                Senha <input type="password" id="idSenha" name="senha"> <br>
-                <input type="button" value="Enviar" onclick="validar();">
-            </fieldset>
-        </form>
-    </center>
-</body>
+                if (idade < 16) {
+                    alert("idade deve ser maior que 15!")
+                    return
+                }
+
+                gebi("meuForm").submit()
+                alert("Sucesso!")
+            }
+        </script>
+    </head>
+
+    <body>
+        <center>
+            <h1>Validar</h1>
+			<form id="meuForm" action="http://jkorpela.fi/cgi-bin/echo.cgi">
+				<fieldset align="center" style="width:270px"> 
+					<legend>Login:</legend>
+					Email: <input id="idEmail"  name="email" type="email" onblur="maiuscula();"><br>
+					Senha: <input id="idSenha" name="senha" type="password"><br> 
+                    Idade: <input id="idIdade" name="idade" type="number"  step="1"><br> 
+					<input type="button" value="Enviar" onclick="validar();"> 
+				</fieldset> 
+			</form> 
+		</center>
+    </body>
 </html>
