--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
     <a href="calculadora.html">Calculadora</a>   
     <br>
-    <button><a href="validar.html">Validação</a></button>
+    <button><a href="validar.html">Validação</a></button> <br>
     <button><a href="formulario.html">Formulário</a></button> <br>
+    <button><a href="email.html">Email</a></button> <br>
 </body>
 </html>
