--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
     <button><a href="validar.html">Validação</a></button> <br>
     <button><a href="formulario.html">Formulário</a></button> <br>
     <button><a href="email.html">Email</a></button> <br>
+    <button><a href="repete.html">Repetição</a></button> <br>
 </body>
 </html>
